--- a/requirements_concatenacao.txt
+++ b/requirements_concatenacao.txt
@@ -1,10 +1,13 @@
 datasets==3.5.0
 scikit_learn==1.6.1
 trainer==0.0.36
-TTS==0.22.0
 ipython==8.12.3
 snac==1.2.1
 soundfile==0.12.1
 transformers==4.51.3
 unsloth==2025.5.7
 
+
+
+trainer==0.0.36
+TTS==0.22.0
