--- a/environment.yml
+++ b/environment.yml
@@ -8,154 +8,156 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - asttokens=3.0.0=pyhd8ed1ab_1
-  - blas=1.0=mkl
-  - brotli-python=1.0.9=py311h6a678d5_9
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2025.2.25=h06a4308_0
-  - certifi=2025.4.26=py311h06a4308_0
-  - comm=0.2.2=pyhd8ed1ab_1
-  - contourpy=1.3.1=py311hdb19cb5_0
-  - cuda-cudart=12.1.105=0
-  - cuda-cupti=12.1.105=0
-  - cuda-libraries=12.1.0=0
-  - cuda-nvrtc=12.1.105=0
-  - cuda-nvtx=12.1.105=0
-  - cuda-opencl=12.4.127=0
-  - cuda-runtime=12.1.0=0
-  - cudatoolkit=11.7.0=hd8887f6_10
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - debugpy=1.8.11=py311h6a678d5_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_1
-  - executing=2.2.0=pyhd8ed1ab_0
-  - expat=2.7.1=h6a678d5_0
-  - ffmpeg=4.3.2=hca11adc_0
-  - filelock=3.17.0=py311h06a4308_0
-  - fontconfig=2.14.1=h55d465d_3
-  - fonttools=4.55.3=py311h5eee18b_0
-  - freetype=2.13.3=h4a9f257_0
-  - gettext=0.19.8.1=h73d1719_1008
-  - gmp=6.3.0=h6a678d5_0
-  - gmpy2=2.2.1=py311h5eee18b_0
-  - gnutls=3.6.15=he1e5248_0
-  - icu=73.1=h6a678d5_0
-  - intel-openmp=2025.0.0=h06a4308_1171
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=9.1.0=pyhfb0248b_0
-  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - jinja2=3.1.6=py311h06a4308_0
-  - jpeg=9e=h5eee18b_3
-  - jupyter_client=8.6.3=pyhd8ed1ab_1
-  - jupyter_core=5.7.2=pyh31011fe_1
-  - kiwisolver=1.4.8=py311h6a678d5_0
-  - krb5=1.20.1=h143b758_1
-  - lame=3.100=h7b6447c_0
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - libabseil=20250127.0=cxx17_h6a678d5_0
-  - libcublas=12.1.0.26=0
-  - libcufft=11.0.2.4=0
-  - libcufile=1.9.1.3=0
-  - libcups=2.4.2=h2d74bed_1
-  - libcurand=10.3.5.147=0
-  - libcurl=8.12.1=hc9e6f67_0
-  - libcusolver=11.4.4.55=0
-  - libcusparse=12.0.2.55=0
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.4.4=h6a678d5_1
-  - libflac=1.3.4=h27087fc_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h5eee18b_3
-  - libidn2=2.3.4=h5eee18b_0
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libnpp=12.0.2.50=0
-  - libnvjitlink=12.1.105=0
-  - libnvjpeg=12.1.1.14=0
-  - libogg=1.3.4=h7f98852_1
-  - libopus=1.3.1=h7f98852_1
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=17.4=hdbd6064_0
-  - libprotobuf=5.29.3=hc99497a_0
-  - libsndfile=1.0.31=h9c3ff4c_1
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.11.1=h251f7ec_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtasn1=4.19.0=h5eee18b_0
-  - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h097e994_2
-  - libxml2=2.13.7=hfdd30dd_0
-  - llvm-openmp=14.0.6=h9e868ea_0
-  - lz4-c=1.9.4=h6a678d5_1
-  - markupsafe=3.0.2=py311h5eee18b_0
-  - matplotlib=3.10.0=py311h06a4308_0
-  - matplotlib-base=3.10.0=py311hbfdbfaf_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - mkl=2025.0.0=hacee8c2_941
-  - mpc=1.3.1=h5eee18b_0
-  - mpfr=4.2.1=h5eee18b_0
-  - mpmath=1.3.0=py311h06a4308_0
-  - mysql=8.4.0=h721767e_2
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_1
-  - nettle=3.7.3=hbbd107a_1
-  - networkx=3.4.2=py311h06a4308_0
-  - openh264=2.1.1=h4ff587b_0
-  - openldap=2.6.4=h42fbc30_0
-  - openssl=3.0.16=h5eee18b_0
-  - parso=0.8.4=pyhd8ed1ab_1
-  - pcre2=10.42=hebb0a14_1
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pip=25.0=py311h06a4308_0
-  - prompt-toolkit=3.0.51=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pyparsing=3.2.0=py311h06a4308_0
-  - pyqt=6.7.1=py311h6a678d5_1
-  - pyqt6-sip=13.9.1=py311h5eee18b_1
-  - python=3.11.11=he870216_0
-  - pytorch-cuda=12.1=ha16c6d3_6
-  - pytorch-mutex=1.0=cuda
-  - pyyaml=6.0.2=py311h5eee18b_0
-  - pyzmq=26.2.0=py311h6a678d5_0
-  - qtbase=6.7.3=hdaa5aa8_0
-  - qtdeclarative=6.7.3=h6a678d5_0
-  - qtsvg=6.7.3=he621ea3_0
-  - qttools=6.7.3=h80c7b02_0
-  - qtwebchannel=6.7.3=h6a678d5_0
-  - qtwebsockets=6.7.3=h6a678d5_0
-  - readline=8.2=h5eee18b_0
-  - setuptools=75.8.0=py311h06a4308_0
-  - sip=6.10.0=py311h6a678d5_0
-  - sqlite=3.45.3=h5eee18b_0
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - tbb=2022.0.0=hdb19cb5_0
-  - tbb-devel=2022.0.0=hdb19cb5_0
-  - tk=8.6.14=h39e8969_0
-  - tornado=6.4.2=py311h5eee18b_0
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing_extensions=4.13.2=pyh29332c3_0
-  - unicodedata2=15.1.0=py311h5eee18b_1
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - wheel=0.45.1=py311h06a4308_0
-  - x264=1!161.3030=h7f98852_1
-  - xcb-util-cursor=0.1.4=h5eee18b_0
-  - xformers=0.0.28.post3=py311_cu12.1.0_pyt2.5.1
-  - xz=5.6.4=h5eee18b_1
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.5=h6a678d5_0
-  - zlib=1.2.13=h5eee18b_1
-  - zstd=1.5.6=hc292b87_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=5.1
+  - asttokens=3.0.0
+  - blas=1.0
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2025.4.26
+  - certifi=2025.4.26
+  - comm=0.2.2
+  - contourpy=1.3.1
+  - cuda-cudart=12.1.105
+  - cuda-cupti=12.1.105
+  - cuda-libraries=12.1.0
+  - cuda-nvrtc=12.1.105
+  - cuda-nvtx=12.1.105
+  - cuda-opencl=12.4.127
+  - cuda-runtime=12.1.0
+  - cudatoolkit=11.7.0
+  - cudnn=8.2.1.32
+  - cycler=0.11.0
+  - cyrus-sasl=2.1.28
+  - debugpy=1.8.11
+  - exceptiongroup=1.2.2
+  - executing=2.2.0
+  - expat=2.7.1
+  - ffmpeg=4.3.2
+  - filelock=3.17.0
+  - fontconfig=2.14.1
+  - fonttools=4.55.3
+  - freetype=2.13.3
+  - gettext=0.19.8.1
+  - gmp=6.3.0
+  - gmpy2=2.2.1
+  - gnutls=3.6.15
+  - icu=73.1
+  - intel-openmp=2025.0.0
+  - ipykernel=6.29.5
+  - ipython=9.1.0
+  - ipython_pygments_lexers=1.1.1
+  - jedi=0.19.2
+  - jinja2=3.1.6
+  - jpeg=9e
+  - jupyter_client=8.6.3
+  - jupyter_core=5.7.2
+  - kiwisolver=1.4.8
+  - krb5=1.20.1
+  - lame=3.100
+  - ld_impl_linux-64=2.40
+  - libabseil=20250127.0
+  - libcublas=12.1.0.26
+  - libcufft=11.0.2.4
+  - libcufile=1.9.1.3
+  - libcups=2.4.2
+  - libcurand=10.3.5.147
+  - libcurl=8.12.1
+  - libcusolver=11.4.4.55
+  - libcusparse=12.0.2.55
+  - libedit=3.1.20230828
+  - libev=4.33
+  - libffi=3.4.4
+  - libflac=1.3.4
+  - libgcc-ng=11.2.0
+  - libglib=2.78.4
+  - libgomp=11.2.0
+  - libiconv=1.16
+  - libidn2=2.3.4
+  - libnghttp2=1.57.0
+  - libnpp=12.0.2.50
+  - libnvjitlink=12.1.105
+  - libnvjpeg=12.1.1.14
+  - libogg=1.3.4
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libpq=17.4
+  - libprotobuf=5.29.3
+  - libsndfile=1.0.31
+  - libsodium=1.0.18
+  - libssh2=1.11.1
+  - libstdcxx-ng=11.2.0
+  - libtasn1=4.19.0
+  - libunistring=0.9.10
+  - libuuid=1.41.5
+  - libvorbis=1.3.7
+  - libxcb=1.15
+  - libxkbcommon=1.0.1
+  - libxml2=2.13.7
+  - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
+  - markupsafe=3.0.2
+  - matplotlib=3.10.0
+  - matplotlib-base=3.10.0
+  - matplotlib-inline=0.1.7
+  - mkl=2025.0.0
+  - mpc=1.3.1
+  - mpfr=4.2.1
+  - mpmath=1.3.0
+  - mysql=8.4.0
+  - ncurses=6.4
+  - nest-asyncio=1.6.0
+  - nettle=3.7.3
+  - networkx=3.4.2
+  - openh264=2.1.1
+  - openldap=2.6.4
+  - openssl=3.0.16
+  - parso=0.8.4
+  - pcre2=10.42
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pip=25.0
+  - prompt-toolkit=3.0.51
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pyparsing=3.2.0
+  - pyqt=6.7.1
+  - pyqt6-sip=13.9.1
+  - python=3.11.11
+  - pytorch-cuda=12.1
+  - pytorch-mutex=1.0
+  - pyyaml=6.0.2
+  - pyzmq=26.2.0
+  - qtbase=6.7.3
+  - qtdeclarative=6.7.3
+  - qtsvg=6.7.3
+  - qttools=6.7.3
+  - qtwebchannel=6.7.3
+  - qtwebsockets=6.7.3
+  - readline=8.2
+  - setuptools=75.8.0
+  - sip=6.10.0
+  - sqlite=3.45.3
+  - stack_data=0.6.3
+  - tbb=2022.0.0
+  - tbb-devel=2022.0.0
+  - tk=8.6.14
+  - tornado=6.4.2
+  - traitlets=5.14.3
+  - typing_extensions=4.13.2
+  - tzdata=2025a
+  - unicodedata2=15.1.0
+  - wcwidth=0.2.13
+  - wheel=0.45.1
+  - x264=1!161.3030
+  - xcb-util-cursor=0.1.4
+  - xformers=0.0.28.post3
+  - xz=5.6.4
+  - yaml=0.2.5
+  - zeromq=4.3.5
+  - zlib=1.2.13
+  - zstd=1.5.6
   - pip:
       - absl-py==2.2.2
       - accelerate==1.6.0
@@ -178,7 +180,7 @@ dependencies:
       - coqpit-config==0.2.0
       - coqui-tts==0.26.2
       - coqui-tts-trainer==0.2.3
-      - ctranslate2==4.6.0
+      - ctranslate2==4.4.0
       - cut-cross-entropy==25.1.1
       - cython==3.1.1
       - datasets==3.5.0
@@ -229,7 +231,7 @@ dependencies:
       - narwhals==1.41.0
       - num2words==0.5.14
       - numba==0.61.2
-      - numpy==2.2.4
+      - numpy==2.2.6
       - nvidia-cublas-cu12==12.4.5.8
       - nvidia-cuda-cupti-cu12==12.4.127
       - nvidia-cuda-nvrtc-cu12==12.4.127
@@ -297,7 +299,6 @@ dependencies:
       - tts-utils==0.1.0
       - typeguard==4.4.2
       - tyro==0.9.18
-      - tzdata==2025.2
       - tzlocal==5.3.1
       - unsloth==2025.3.19
       - unsloth-zoo==2025.3.17
