--- a/environment.yml
+++ b/environment.yml
@@ -1,311 +1,36 @@
-name: aplicacao
+name: autotuning
 channels:
-  - xformers
-  - pytorch
   - nvidia
+  - pytorch
   - conda-forge
   - defaults
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
+
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - asttokens=3.0.0
-  - blas=1.0
-  - brotli-python=1.0.9
-  - bzip2=1.0.8
-  - c-ares=1.19.1
-  - ca-certificates=2025.4.26
-  - certifi=2025.4.26
-  - comm=0.2.2
-  - contourpy=1.3.1
-  - cuda-cudart=12.1.105
-  - cuda-cupti=12.1.105
-  - cuda-libraries=12.1.0
-  - cuda-nvrtc=12.1.105
-  - cuda-nvtx=12.1.105
-  - cuda-opencl=12.4.127
-  - cuda-runtime=12.1.0
-  - cudatoolkit=11.7.0
-  - cudnn=8.2.1.32
-  - cycler=0.11.0
-  - cyrus-sasl=2.1.28
-  - debugpy=1.8.11
-  - exceptiongroup=1.2.2
-  - executing=2.2.0
-  - expat=2.7.1
-  - ffmpeg=4.3.2
-  - filelock=3.17.0
-  - fontconfig=2.14.1
-  - fonttools=4.55.3
-  - freetype=2.13.3
-  - gettext=0.19.8.1
-  - gmp=6.3.0
-  - gmpy2=2.2.1
-  - gnutls=3.6.15
-  - icu=73.1
-  - intel-openmp=2025.0.0
-  - ipykernel=6.29.5
-  - ipython=9.1.0
-  - ipython_pygments_lexers=1.1.1
-  - jedi=0.19.2
-  - jinja2=3.1.6
-  - jpeg=9e
-  - jupyter_client=8.6.3
-  - jupyter_core=5.7.2
-  - kiwisolver=1.4.8
-  - krb5=1.20.1
-  - lame=3.100
-  - ld_impl_linux-64=2.40
-  - libabseil=20250127.0
-  - libcublas=12.1.0.26
-  - libcufft=11.0.2.4
-  - libcufile=1.9.1.3
-  - libcups=2.4.2
-  - libcurand=10.3.5.147
-  - libcurl=8.12.1
-  - libcusolver=11.4.4.55
-  - libcusparse=12.0.2.55
-  - libedit=3.1.20230828
-  - libev=4.33
-  - libffi=3.4.4
-  - libflac=1.3.4
-  - libgcc-ng=11.2.0
-  - libglib=2.78.4
-  - libgomp=11.2.0
-  - libiconv=1.16
-  - libidn2=2.3.4
-  - libnghttp2=1.57.0
-  - libnpp=12.0.2.50
-  - libnvjitlink=12.1.105
-  - libnvjpeg=12.1.1.14
-  - libogg=1.3.4
-  - libopus=1.3.1
-  - libpng=1.6.39
-  - libpq=17.4
-  - libprotobuf=5.29.3
-  - libsndfile=1.0.31
-  - libsodium=1.0.18
-  - libssh2=1.11.1
-  - libstdcxx-ng=11.2.0
-  - libtasn1=4.19.0
-  - libunistring=0.9.10
-  - libuuid=1.41.5
-  - libvorbis=1.3.7
-  - libxcb=1.15
-  - libxkbcommon=1.0.1
-  - libxml2=2.13.7
-  - llvm-openmp=14.0.6
-  - lz4-c=1.9.4
-  - markupsafe=3.0.2
-  - matplotlib=3.10.0
-  - matplotlib-base=3.10.0
-  - matplotlib-inline=0.1.7
-  - mkl=2025.0.0
-  - mpc=1.3.1
-  - mpfr=4.2.1
-  - mpmath=1.3.0
-  - mysql=8.4.0
-  - ncurses=6.4
-  - nest-asyncio=1.6.0
-  - nettle=3.7.3
-  - networkx=3.4.2
-  - openh264=2.1.1
-  - openldap=2.6.4
-  - openssl=3.0.16
-  - parso=0.8.4
-  - pcre2=10.42
-  - pexpect=4.9.0
-  - pickleshare=0.7.5
-  - pip=25.0
-  - prompt-toolkit=3.0.51
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.3
-  - pyparsing=3.2.0
-  - pyqt=6.7.1
-  - pyqt6-sip=13.9.1
-  - python=3.11.11
-  - pytorch-cuda=12.1
-  - pytorch-mutex=1.0
-  - pyyaml=6.0.2
-  - pyzmq=26.2.0
-  - qtbase=6.7.3
-  - qtdeclarative=6.7.3
-  - qtsvg=6.7.3
-  - qttools=6.7.3
-  - qtwebchannel=6.7.3
-  - qtwebsockets=6.7.3
-  - readline=8.2
-  - setuptools=75.8.0
-  - sip=6.10.0
-  - sqlite=3.45.3
-  - stack_data=0.6.3
-  - tbb=2022.0.0
-  - tbb-devel=2022.0.0
-  - tk=8.6.14
-  - tornado=6.4.2
-  - traitlets=5.14.3
-  - typing_extensions=4.13.2
-  - tzdata=2025a
-  - unicodedata2=15.1.0
-  - wcwidth=0.2.13
-  - wheel=0.45.1
-  - x264=1!161.3030
-  - xcb-util-cursor=0.1.4
-  - xformers=0.0.28.post3
-  - xz=5.6.4
-  - yaml=0.2.5
-  - zeromq=4.3.5
-  - zlib=1.2.13
-  - zstd=1.5.6
+  - python=3.11
+  - pip
+  - pytorch=2.3.0
+  - pytorch-cuda=12.4
+  - torchaudio
+  - torchvision
+  - ffmpeg
+  - libsndfile
+  - numpy
+  - matplotlib
+  - scipy
+  - pandas
+  - ipython
+  - jupyterlab
+  - librosa
+  - ca-certificates
+  - openssl
+  - av
+  - ffmpeg
+  
   - pip:
-      - absl-py==2.2.2
-      - accelerate==1.6.0
-      - aiohappyeyeballs==2.6.1
-      - aiohttp==3.11.16
-      - aiosignal==1.3.2
-      - altair==5.5.0
-      - anyascii==0.3.2
-      - attrs==25.3.0
-      - audioread==3.0.1
-      - av==14.4.0
-      - babel==2.17.0
-      - bitsandbytes==0.45.5
-      - blinker==1.9.0
-      - cachetools==5.5.2
-      - cffi==1.17.1
-      - charset-normalizer==3.4.1
-      - click==8.2.1
-      - coloredlogs==15.0.1
-      - coqpit-config==0.2.0
-      - coqui-tts==0.26.2
-      - coqui-tts-trainer==0.2.3
-      - ctranslate2==4.4.0
-      - cut-cross-entropy==25.1.1
-      - cython==3.1.1
-      - datasets==3.5.0
-      - dateparser==1.1.8
-      - decorator==5.2.1
-      - diffusers==0.33.1
-      - dill==0.3.8
-      - docopt==0.6.2
-      - docstring-parser==0.16
-      - einops==0.8.1
-      - encodec==0.1.1
-      - faster-whisper==1.1.1
-      - flash-attn==2.7.4.post1
-      - flatbuffers==25.2.10
-      - frozenlist==1.5.0
-      - fsspec==2024.12.0
-      - gitdb==4.0.12
-      - gitpython==3.1.44
-      - grpcio==1.71.0
-      - gruut==2.4.0
-      - gruut-ipa==0.13.0
-      - gruut-lang-de==2.0.1
-      - gruut-lang-en==2.0.1
-      - gruut-lang-es==2.0.1
-      - gruut-lang-fr==2.0.2
-      - hf-transfer==0.1.9
-      - huggingface-hub==0.31.4
-      - humanfriendly==10.0
-      - idna==3.10
-      - importlib-metadata==8.6.1
-      - inflect==7.5.0
-      - joblib==1.4.2
-      - jsonlines==1.2.0
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2025.4.1
-      - lazy-loader==0.4
-      - levenshtein==0.27.1
-      - librosa==0.11.0
-      - llvmlite==0.44.0
-      - markdown==3.8
-      - markdown-it-py==3.0.0
-      - mdurl==0.1.2
-      - monotonic-alignment-search==0.2.0
-      - more-itertools==10.7.0
-      - msgpack==1.1.0
-      - multidict==6.4.3
-      - multiprocess==0.70.16
-      - narwhals==1.41.0
-      - num2words==0.5.14
-      - numba==0.61.2
-      - numpy==2.2.6
-      - nvidia-cublas-cu12==12.4.5.8
-      - nvidia-cuda-cupti-cu12==12.4.127
-      - nvidia-cuda-nvrtc-cu12==12.4.127
-      - nvidia-cuda-runtime-cu12==12.4.127
-      - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.2.1.3
-      - nvidia-curand-cu12==10.3.5.147
-      - nvidia-cusolver-cu12==11.6.1.9
-      - nvidia-cusparse-cu12==12.3.1.170
-      - nvidia-cusparselt-cu12==0.6.2
-      - nvidia-nccl-cu12==2.21.5
-      - nvidia-nvjitlink-cu12==12.4.127
-      - nvidia-nvtx-cu12==12.4.127
-      - onnxruntime==1.22.0
-      - packaging==24.2
-      - pandas==2.2.3
-      - peft==0.15.1
-      - pillow==11.2.1
-      - platformdirs==4.3.7
-      - pooch==1.8.2
-      - propcache==0.3.1
-      - protobuf==3.20.3
-      - psutil==7.0.0
-      - pyarrow==19.0.1
-      - pycparser==2.22
-      - pydeck==0.9.1
-      - pydub==0.25.1
-      - pygments==2.19.1
-      - pysbd==0.3.4
-      - python-crfsuite==0.9.11
-      - python-dateutil==2.9.0.post0
-      - python-levenshtein==0.27.1
-      - pytz==2025.2
-      - rapidfuzz==3.13.0
-      - referencing==0.36.2
-      - regex==2024.11.6
-      - requests==2.32.3
-      - rich==13.9.4
-      - rpds-py==0.25.1
-      - safetensors==0.5.3
-      - scikit-learn==1.6.1
-      - scipy==1.15.2
-      - sentencepiece==0.2.0
-      - shtab==1.7.2
-      - six==1.17.0
-      - smmap==5.0.2
+      - git+https://github.com/gruporaia/TTS-Utils.git
+      - git+https://github.com/idiap/coqui-ai-TTS.git
+      - streamlit
+      - datasets==3.6.0
       - snac==1.2.1
-      - soundfile==0.13.1
-      - soxr==0.5.0.post1
-      - streamlit==1.41.1
-      - sympy==1.13.1
-      - tenacity==9.1.2
-      - tensorboard==2.19.0
-      - tensorboard-data-server==0.7.2
-      - threadpoolctl==3.6.0
-      - tokenizers==0.21.1
-      - toml==0.10.2
-      - torch==2.6.0
-      - torchaudio==2.6.0+cu124
-      - torchvision==0.21.0
-      - tqdm==4.67.1
-      - transformers==4.51.3
-      - triton==3.2.0
-      - trl==0.15.2
-      - tts-utils==0.1.0
-      - typeguard==4.4.2
-      - tyro==0.9.18
-      - tzlocal==5.3.1
-      - unsloth==2025.3.19
-      - unsloth-zoo==2025.3.17
-      - urllib3==2.4.0
-      - watchdog==6.0.0
-      - werkzeug==3.1.3
-      - xxhash==3.5.0
-      - yarl==1.19.0
-      - zipp==3.21.0
-prefix: /store/lucasouza/miniconda3/envs/aplicacao
+      - unsloth==2025.5.7
+      - pip install torch==2.6.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/cu124_full --force-reinstall
